# arceos

./: Cargo.toml  Dockerfile  Makefile  README.md  arceos-crates-analysis.md  index.html  rust-toolchain.toml  search-index.js  src-files.js
apps/testcase/: Cargo.toml
apps/testcase/src/: loader.rs  main.rs
arceos_posix_api/: all.html  constant.AT_FDCWD.html  fn.add_file_like.html  fn.char_ptr_to_str.html  fn.get_file_like.html  fn.handle_file_path.html  fn.sys_close.html  fn.sys_dup.html  fn.sys_dup2.html  fn.sys_fcntl.html  fn.sys_fstat.html  fn.sys_get_time_of_day.html  fn.sys_getcwd.html  fn.sys_lseek.html  fn.sys_lstat.html  fn.sys_open.html  fn.sys_openat.html  fn.sys_rename.html  fn.sys_stat.html  fn.sys_write.html  fn.sys_writev.html  index.html  static.HARDLINK_MANAGER.html  struct.Directory.html  struct.FD_TABLE.html  struct.File.html  struct.FilePath.html
axalloc/: fn.global_add_memory.html  fn.global_allocator.html  fn.global_init.html  index.html  struct.GlobalAllocator.html
axfs/: all.html  fn.init_filesystems.html  index.html  struct.CURRENT_DIR.html  struct.CURRENT_DIR_PATH.html
axhal/: all.html
axlibc/: fn.longjmp.html  fn.setjmp.html
axmm/: all.html  enum.Backend.html  fn.init_memory_management.html  fn.init_memory_management_secondary.html  fn.kernel_aspace.html  fn.kernel_page_table_root.html  fn.new_kernel_aspace.html  fn.new_user_aspace.html  index.html  sidebar-items.js  struct.AddrSpace.html
axns/: fn.current_namespace_base.html  index.html  macro.def_resource.html  struct.AxNamespace.html  struct.ResArc.html  trait.AxNamespaceIf.html
axsync/: all.html  index.html  struct.RawMutex.html  type.Mutex.html  type.MutexGuard.html
axtask/: all.html  enum.TaskState.html  fn.current.html  fn.current_may_uninit.html  fn.exit.html  fn.init_scheduler.html  fn.init_scheduler_secondary.html  fn.on_timer_tick.html  fn.run_idle.html  fn.set_current_affinity.html  fn.set_priority.html  fn.sleep.html  fn.sleep_until.html  fn.spawn.html  index.html  (+12 more)
modules/axhal/: Cargo.toml  build.rs  linker.lds.S
modules/axhal/src/: bin_utils.rs  cpu.rs  lib.rs  mem.rs  paging.rs  trap.rs
modules/axhal/src/arch/aarch64/: context.rs  mod.rs  trap.rs
modules/axhal/src/arch/loongarch64/: context.rs  mod.rs  trap.S  trap.rs  unaligned.S  unaligned.rs
modules/axhal/src/arch/riscv/: context.rs  csr.rs  macros.rs  mod.rs  trap.rs
modules/axhal/src/arch/x86_64/: context.rs  mod.rs  syscall.S  syscall.rs  tls.rs  trap.S  trap.rs
modules/axhal/src/platform/: mod.rs
modules/axhal/src/platform/loongarch64_2k1000/: boot.rs  console.rs  consts.rs  mod.rs  mp.rs
modules/axhal/src/platform/loongarch64_qemu_virt/: boot.rs  mod.rs
modules/axmm/: Cargo.toml
modules/axmm/src/: aspace.rs  frameinfo.rs  lib.rs  page.rs  page_iter_wrapper.rs
modules/axmm/src/backend/: alloc.rs  file.rs  linear.rs  mod.rs  page_iter_wrapper.rs
modules/axsyscall/: Cargo.toml
modules/axsyscall/src/: axsyscalls.rs  lib.rs  test.rs
modules/axsyscall/src/sys_fs/: io.rs
(+177 files in other folders)
