[package]
name = "testcase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
[dependencies]
axstd = { workspace = true}
axfs = { workspace = true}
