[package]
name = "axhal"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS hardware abstraction layer, provides unified APIs for platform-specific operations"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axhal"
documentation = "https://arceos-org.github.io/arceos/axhal/index.html"

[features]
smp = ["axhal_plat_impl/smp"]
fp_simd = ["axhal_cpu/fp_simd", "axhal_plat_impl/fp_simd"]
paging = ["axalloc", "page_table_multiarch"]
irq = ["linkme", "axhal_plat_impl/irq"]
tls = ["axhal_cpu/tls"]
rtc = ["axhal_plat_impl/rtc"]
uspace = ["paging", "axhal_cpu/uspace"]
default = []

[dependencies]
log = "=0.4.21"
cfg-if = "1.0"
kernel_guard = "0.1"
lazyinit = "0.2"
percpu = "0.2"
heapless = "0.8"
memory_addr = "0.3"
linkme = { version = "0.3", optional = true }
page_table_multiarch = { version = "0.5", optional = true }
axhal_cpu = { workspace = true }
axhal_plat = { workspace = true  }
axconfig = { workspace = true }
axalloc = { workspace = true, optional = true }
axhal_plat_impl = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
tock-registers = "0.9"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"
ns16550a = "0.4.0"

[build-dependencies]
axconfig = { workspace = true }
