[package]
name = "axmm"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS virtual memory management module"
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axmm"
documentation = "https://arceos-org.github.io/arceos/axmm/index.html"

[dependencies]
axhal = { workspace = true, features = ["paging"] }
axconfig = { workspace = true }

log = "=0.4.21"
axerrno = "0.1"
lazyinit = "0.2"
memory_addr = "0.3"
kspin = "0.1"
memory_set = "0.3"
page_table_multiarch = "0.5.3"
page_table_entry = "0.5.3"
cfg-if = "1.0"

aspace_generic = { git = "https://github.com/arceos-org/aspace_generic.git", features = ["uspace"] }
